# tree-sitter

./: Cargo.toml  README.md  compile_commands.json  meson.build  transpile.sh
.github/workflows/: build.yml  ci.yml  sanitize.yml
cli/: Cargo.toml
cli/src/tests/: parser_test.rs
lib/: Cargo.toml
lib/binding_rust/: build.rs  ffi.rs  lib.rs  util.rs
lib/binding_rust/core_wrapper/: alloc.rs  alpha.data  capi.rs  mod.rs  util.rs
lib/binding_rust/core_wrapper/core/: alloc.rs  api_raw.rs  defines.rs  get_changed_ranges.rs  language.rs  lexer.rs  node.rs  parser.rs  query.rs  stack.rs  subtree.rs  tree.rs  tree_cursor.rs  wasm_store.rs
process_c2rust/: Cargo.toml
process_c2rust/src/: main.rs
script/: test
