[package]
name = "tree-sitter-c2rust"
version.workspace = true
description = "Rust bindings to the Tree-sitter parsing library, with a pure Rust runtime via c2rust"
authors.workspace = true
edition.workspace = true
rust-version = "1.65"
readme = "binding_rust/README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings", "parsing", "text-editors"]

include = [
  "/binding_rust/*",
  "/Cargo.toml",
  "/src/*.h",
  "/src/*.c",
  "/src/unicode/*",
  "/src/wasm/*",
  "/include/tree_sitter/api.h",
]

build = "binding_rust/build.rs"

[features]
wasm = ["wasmtime-c-api"]
capi = ["errno", "libc"]

[dependencies]
regex.workspace = true
c2rust-bitfields = "0.3"
once_cell = "1.3.1"
errno = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }

[dependencies.wasmtime-c-api]
version = "19"
optional = true
package = "wasmtime-c-api-impl"
default-features = false

[lib]
path = "binding_rust/lib.rs"
